<resources>
    <string name="app_name">Recalls and Safety Alerts</string>

    <!-- Bottom navigation view -->
    <string name="title_recent">Recent Recalls</string>
    <string name="title_my_recalls">My Recalls</string>
    <string name="title_more">More</string>

    <!-- Recalls -->
    <string name="label_category_food">Food</string>
    <string name="label_category_vehicle">Vehicle</string>
    <string name="label_category_health_product">Health Product</string>
    <string name="label_category_consumer_product">Consumer Product</string>
    <string name="label_category_miscellaneous">Miscellaneous</string>
    <string name="title_empty_recent_recall">Unable to retrieve recalls</string>
    <string name="title_empty_recent_recall_no_category_selected">No category selected</string>
    <string name="label_retry">Retry</string>
    <string name="label_filter">Filter</string>
    <string name="title_filters">Filters</string>
    <string name="label_done">Done</string>
    <string name="error_generic">An error has occurred</string>
    <string name="error_offline">No Internet Connection</string>
    <string name="label_action_mark_recall_as_read">Mark as Read</string>
    <string name="message_recall_marked_as_read">Marked as Read</string>
    <string name="label_action_bookmark_recall">Save</string>
    <string name="label_action_bookmark_recall_add_to_my_recalls">Add to My Recalls</string>
    <string name="label_action_unbookmark_recall_remove_from_my_recalls">Remove from My Recalls</string>
    <string name="message_recall_bookmarked">Saved</string>

    <!-- My Recalls -->
    <string name="title_empty_bookmark">No recalls saved</string>
    <string name="text_empty_bookmark">Save a recall and it will show up here</string>
    <string name="message_unbookmark">Recall unsaved</string>
    <string name="label_undo_unbookmark">Cancel</string>

    <!-- Recall Details -->
    <string name="label_back">Back</string>
    <string name="label_recall_link">Link</string>
    <string name="label_share_recall">Share</string>

    <!-- Settings -->
    <string name="title_pref_category_notifications">Pushed Notifications</string>
    <string name="title_notifications_pref">Notifications Setting</string>
    <string name="label_notifications_pref_no">No notification</string>
    <string name="label_notifications_pref_all">All recalls and alerts</string>
    <string name="label_notifications_pref_keyword">Only if the title of the recall or the alert includes a keyword</string>
    <string name="title_notifications_sync_frequency_pref">Synchronization Frequency</string>
    <string name="label_notifications_sync_frequency_pref_15_min">15 minutes</string>
    <string name="label_notifications_sync_frequency_pref_30_min">30 minutes</string>
    <string name="label_notifications_sync_frequency_pref_1_hour">1 hour</string>
    <string name="label_notifications_sync_frequency_pref_12_hours">12 hours</string>
    <string name="label_notifications_sync_frequency_pref_1_day">1 day</string>
    <string name="title_notifications_keywords_pref">Your keywords</string>
    <string name="summary_notifications_keywords_pref">Set up notifications based on keywords your specify</string>
    <string name="title_notifications_system_pref">Device Notifications Settings</string>
    <string name="summary_notifications_system_pref">Customize your notifications through Android\'s Settings</string>
    <string name="title_pref_category_display">Display</string>
    <string name="title_theme_pref">Theme</string>
    <string name="label_theme_pref_light">Light</string>
    <string name="label_theme_pref_dark">Dark</string>
    <string name="label_theme_pref_system_default">System Default</string>
    <string name="label_theme_pref_battery_saver">Set by Battery Saver</string>

    <!-- Notification Keywords -->
    <string name="label_delete_notification_keyword">Delete the keyword</string>
    <string name="message_notification_keyword_deleted">Keyword deleted!</string>
    <string name="title_empty_notification_keyword">No keywords</string>
    <string name="text_empty_notification_keyword">Keywords notify you when a recall or safety alert might interest you</string>
    <string name="label_add_notification_keyword">Add a keyword</string>
    <string name="label_hint_add_new_notification_keyword">New keyword</string>
    <string name="label_add_new_notification_keyword">Add</string>

    <!-- More -->
    <string name="title_settings">Settings</string>
    <string name="text_description_settings">Configure notifications and application theme</string>
    <string name="title_report">Report a Recall</string>
    <string name="text_description_report">Report a health and safety concern to the Government of Canada</string>
    <string name="url_report">https://www.canada.ca/en/services/health/report-health-safety-concern.html</string>
    <string name="title_contact_health_canada">Contact Health Canada</string>
    <string name="text_description_contact_health_canada">Share your questions, comments or concerns with Health Canada</string>
    <string name="url_contact_health_canada">https://healthycanadians.gc.ca/contact-contactez/index-eng.php</string>
    <string name="title_website">Website</string>
    <string name="url_website">https://healthycanadians.gc.ca/recall-alert-rappel-avis/index-eng.php</string>
    <string name="text_description_website">@string/url_website</string>
    <string name="title_motor_vehicle_safety_recalls_database">Motor Vehicle Safety Recalls Database</string>
    <string name="url_motor_vehicle_safety_recalls_database">https://wwwapps.tc.gc.ca/Saf-Sec-Sur/7/VRDB-BDRV/search-recherche/menu.aspx?lang=eng</string>
    <string name="text_description_motor_vehicle_safety_recalls_database">For the latest information on vehicle recalls</string>
    <string name="title_data_licence">Data Licence</string>
    <string name="text_description_data_licence">Open Government Licence - Canada</string>
    <string name="url_data_licence">https://open.canada.ca/en/open-government-licence-canada</string>
    <string name="title_source_code">Source Code</string>
    <string name="text_description_source_code">The application\'s source code on GitHub</string>
    <string name="url_source_code">https://github.com/Sonphil/CanadaRecallsAndSafetyAlerts</string>
    <string name="title_contact_dev">Contact the Developer</string>
    <string name="text_description_contact_dev">@string/email_dev</string>
    <string name="text_body_contact_dev">Version: %1$s\nDevice: %2$s\nAndroid Version:</string>
</resources>