<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.notification.NotificationsFragment">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp">

        <RadioButton
            android:id="@+id/radio_button_no_notifications"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/label_notifications_pref_no"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_button_all_notifications"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/label_notifications_pref_all"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_button_keywords_notifications"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/label_notifications_pref_keyword"
            android:textSize="16sp" />
    </RadioGroup>
</LinearLayout>