<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="androidx.coordinatorlayout.widget.CoordinatorLayout">

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/card_view_categories_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/design_bottom_navigation_height"
        android:visibility="invisible"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="1dp"
        app:cardUseCompatPadding="true"
        app:layout_behavior="com.google.android.material.transformation.FabTransformationSheetBehavior"
        tools:ignore="PrivateResource"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/tv_title_categories_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/title_filters"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_categories_filter_done"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/label_done"
                android:padding="16dp"
                android:src="@drawable/ic_done_all_white_24dp"
                android:tooltipText="@string/label_done"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_categories_filter">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group_category_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_category_filter_food"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_category_food"
                        app:chipBackgroundColor="@android:color/white" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_category_filter_vehicle"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_category_vehicle"
                        app:chipBackgroundColor="@android:color/white" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_category_filter_health_product"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_category_health_product"
                        app:chipBackgroundColor="@android:color/white" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_category_filter_consumer_product"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_category_consumer_product"
                        app:chipBackgroundColor="@android:color/white" />
                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_filter_recalls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="72dp"
        android:contentDescription="@string/label_filter"
        app:backgroundTint="@color/colorPrimary"
        app:layout_anchor="@id/bottom_navigation_view"
        app:layout_anchorGravity="bottom|right|end"
        app:srcCompat="@drawable/ic_filter_list_white_24dp"
        app:tint="@android:color/white" />
</merge>